--- a/javatypescript/package.json
+++ b/javatypescript/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mechanicad",
   "version": "1.0.0",
-  "main": "./electron/main.js",
+  "main": "main/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron ."
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/electron": "^1.6.10",
     "electron": "^32.0.1",
     "typescript": "^5.5.4"
   }
