--- a/javatypescript/package.json
+++ b/javatypescript/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mechanicad",
   "version": "1.0.0",
-  "main": "main/main.js",
+  "main": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron ."
